--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,9 +1,13 @@
+<!--Code for the navigation bar-->
 <nav>
   <div class="site-title">
+    <!--Title of the Blog-->
     <a href="/"><h1>Blog Test </h1></a>
+    <!--Text under the title-->
     <p>Magilan's Test Blog</p>
   </div>
   <ul>
+    <!--"Blogs" & "New Blog" text in the navigation bar-->
     <li><a href="/">Blogs</a></li>
     <li><a href="/blogs/create">New Blog</a></li>
   </ul>
